2-4-2023 changes in all fronts

--- a/login.html
+++ b/login.html
@@ -78,15 +78,7 @@
         <div class="container-fluid">
           <br />
           <br />
-          <!-- Button trigger modal -->
-          <button
-            type="button"
-            class="btn btn-primary"
-            data-bs-toggle="modal"
-            data-bs-target="#loginModal"
-          >
-            Show Login Dialog
-          </button>
+
 
           <!-- Modal -->
           <div
@@ -107,6 +99,7 @@
                     class="btn-close"
                     data-bs-dismiss="modal"
                     aria-label="Close"
+                    onclick="window.location = '/';"
                   ></button>
                 </div>
                 <div class="modal-body">
