--- a/index.html
+++ b/index.html
@@ -98,13 +98,19 @@
             data-bs-slide-to="2"
             aria-label="Slide 3"
           ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
         </div>
 
         <div class="carousel-inner h-100">
           <div class="carousel-item active h-100" data-bs-interval="2000">
             <div
               class="bd-placeholder-img bd-placeholder-img-lg d-flex flex-fill justify-content-center align-content-center w-100 bg-primary bg-opacity-50"
-              style="height: 65%"
+              style="height: 100%"
             >
               <img
                 height="100%"
@@ -113,14 +119,23 @@
                 srcset=""
               />
             </div>
-            <div class="carousel-caption d-none d-md-block">
-              <h1>The Ultimate Shopping Destination for the Masses</h1>
+            <div
+              class="carousel-caption d-block"
+              style="
+                background-color: rgb(72, 3, 3);
+                opacity: 0.7;
+                padding: 10px;
+              "
+            >
+              <br />
+              <br />
+              <h3>The Ultimate Shopping Destination for the Masses</h3>
+              <br />
+              <hr />
               <p>
                 myStore is the online store that offers everything you need in
                 one place. From fashion to electronics, home goods, and beyond,
-                we've got it all. With a user-friendly website, fast delivery,
-                and top-notch customer service, shopping at myStore is an
-                enjoyable and stress-free experience. Say goodbye to crowded
+                we've got it all. Say goodbye to crowded
                 stores and hello to the ultimate shopping destination for the
                 masses.
               </p>
@@ -130,7 +145,7 @@
           <div class="carousel-item h-100" data-bs-interval="2000">
             <div
               class="bd-placeholder-img bd-placeholder-img-lg d-flex flex-fill justify-content-center align-content-center w-100 bg-success bg-opacity-50"
-              style="height: 65%"
+              style="height: 100%"
             >
               <img
                 height="100%"
@@ -139,15 +154,24 @@
                 srcset=""
               />
             </div>
-            <div class="carousel-caption d-none d-md-block">
-              <h1>Shop Without the Hassle</h1>
+            <div
+              class="carousel-caption d-block"
+              style="
+                background-color: rgb(2, 25, 75);
+                opacity: 0.7;
+                padding: 10px;
+              "
+            >
+              <br />
+              <br />
+              <h3>Shop Without the Hassle</h3>
+              <br />
+              <hr />
               <p>
                 Tired of dealing with long lines, traffic, and crowded stores?
                 Look no further than myStore - the online store for the masses.
                 Our easy-to-use website and fast delivery options make shopping
-                a breeze, and our commitment to providing excellent customer
-                service ensures that you have a stress-free shopping experience.
-                Say goodbye to the hassle and shop at myStore today.
+                a breeze. Say goodbye to the hassle and shop at myStore today.
               </p>
             </div>
           </div>
@@ -155,7 +179,7 @@
           <div class="carousel-item h-100" data-bs-interval="2000">
             <div
               class="bd-placeholder-img bd-placeholder-img-lg d-flex flex-fill justify-content-center align-content-center w-100 bg-danger bg-opacity-50"
-              style="height: 65%"
+              style="height: 100%"
             >
               <img
                 height="100%"
@@ -164,16 +188,59 @@
                 srcset=""
               />
             </div>
-            <div class="carousel-caption d-none d-md-block">
-              <h1>Discover the Ultimate Shopping Experience</h1>
+            <div
+              class="carousel-caption d-block"
+              style="
+                background-color: rgb(20, 88, 3);
+                opacity: 0.7;
+                padding: 10px;
+              "
+            >
+              <br />
+              <br />
+              <h3>Discover the Ultimate Shopping Experience</h3>
+              <br />
+              <hr />
               <p>
                 At myStore, we believe that shopping should be an enjoyable
                 experience, and that's exactly what we aim to provide. As an
                 online store for the masses, we offer a vast selection of
-                products across multiple categories, making it a one-stop-shop
-                for all your shopping needs. With fast delivery and outstanding
-                customer service, shopping at myStore is the ultimate shopping
+                products across multiple categories. Shopping at myStore is the ultimate shopping
                 experience. So, why not discover it for yourself today?
+              </p>
+            </div>
+          </div>
+
+          <div class="carousel-item h-100" data-bs-interval="2000">
+            <div
+              class="bd-placeholder-img bd-placeholder-img-lg d-flex flex-fill justify-content-center align-content-center w-100 bg-danger bg-opacity-50"
+              style="height: 100%"
+            >
+              <img
+                height="100%"
+                src="./assets/img/hero04.jpg"
+                alt=""
+                srcset=""
+              />
+            </div>
+            <div
+              class="carousel-caption d-block"
+              style="
+                background-color: rgb(88, 3, 79);
+                opacity: 0.7;
+                padding: 10px;
+              "
+            >
+              <br />
+              <br />
+              <h3>Meet our most dedicated delivery team</h3>
+              <br />
+              <hr />
+              <p>
+                At myStore, we believe that having a reliable and dependable
+                system to handle product deliveries to our most valued clients
+                is most important part. We are very proud to have the best and
+                most driven personnel to handle your precious goodies.
               </p>
             </div>
           </div>
@@ -201,10 +268,25 @@
       </div>
       <section id="categories">
         <div class="container">
-          <h2 class="mb-5">
-            <i><b>Product Categories</b></i>
+          <h2 class="mb-2">
+            <i><b>Select Product Categories</b></i>
           </h2>
+          <hr />
+          <br>
           <div class="row row-cols-md-5" id="categories-list"></div>
+          <h2 class="mb-2">
+            <div class="d-flex flex-md-row align-items-center">
+              <div class="pulse">
+                <i class="fa fa-bolt"></i>
+              </div>
+              <div class=" px-md-3">
+                <i><b>Items On Sale!</b></i>
+              </div>
+            </div>
+          </h2>
+          <hr />
+          <br>
+          <div class="row row-cols-md-4" id="on-sale-list"></div>
         </div>
       </section>
     </main>
